k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siem-frontend
  namespace: siem-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: siem-frontend
  template:
    metadata:
      labels:
        app: siem-frontend
    spec:
      imagePullSecrets:
        - name: aliyun-acr-secret
      securityContext:
        runASNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001

      containers:
      - name: nextjs
        image: seclink-siem-cr-registry.cn-hangzhou.cr.aliyuncs.com/siem/siem-frontend:v0.81
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: false
---
apiVersion: v1
kind: Service
metadata:
  name: siem-frontend
  namespace: siem-dev
  annotations:
    # 阿里云 CLB 自动创建公网负载均衡
    service.beta.kubernetes.io/alicloud-loadbalancer-address-type: "internet"
    service.beta.kubernetes.io/alicloud-loadbalancer-spec: "slb.s1.small"
    service.beta.kubernetes.io/alicloud-loadbalancer-cert-id: "1619025163396376_19db93733fe_-1160981210_-1355241011"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-force-override-geometry: "true"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-protocol-port: "https:443"
spec:
  type: LoadBalancer
  selector:
    app: siem-frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: https
    port: 443
    targetPort: 3000
