k8s/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siem-db
  namespace: siem-dev
spec:
  selector:
    matchLabels:
      app: siem-db
  template:
    metadata:
      labels:
        app: siem-db
    spec:
      containers:
      - name: postgres
        image: seclink-siem-cr-registry.cn-hangzhou.cr.aliyuncs.com/siem/postgres:15-alpine
        ports:
        - containerPort: 5432
        volumesMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
        
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: siem-dev
spec:
  selector:
    app: siem-db
  ports:
  - port: 5432
    targetPort: 5432
